[package]
name = "dns-sd-browser"
version = "0.1.0"
edition = "2021"


[lib]

[[bin]]
name = "browser"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
socket2 = { version = "0.5", features = ["all"] }
simple-dns = { version = "0.5" }
futures = "*"
either = "*"
priority-queue = "*"
parking_lot = "*"
